# httpclient-jni

./: CMakeLists.txt  README.md
include/: HttpM_ReqHttp.h  buffile.h  httpconn.h  httpmng.h  log.h  socketfun.h  utils.h
java/: ReqHttp.java  ReqTask.java  httptest.java
src/: CMakeLists.txt  HttpM_ReqHttp.cpp  buffile.cpp  httpconn.cpp  httpmng.cpp  log.cpp  main.cpp  socketfun.cpp  utils.cpp
